--- a/_posts/2016-6-2-TD-1-Deuxième-Partie.html
+++ b/_posts/2016-6-2-TD-1-Deuxième-Partie.html
@@ -135,7 +135,7 @@ $(document).ready(function () {
 <pre class="r"><code>de6 &lt;- function(n) sample(1:6, n, replace = T)</code></pre>
 <p>Deux lancers pourront donner le résultat suivant</p>
 <pre class="r"><code>de6(2)</code></pre>
-<pre><code>## [1] 6 4</code></pre>
+<pre><code>## [1] 1 3</code></pre>
 <p>On considère la variable <span class="math">\(X\)</span> définie par le programme suivant</p>
 <pre class="r"><code>n = 1
 x &lt;- sample(1:de6(1), 1, replace = T)</code></pre>
@@ -146,12 +146,12 @@ x &lt;- sample(1:de6(1), 1, replace = T)</code></pre>
 </ul>
 <pre class="r"><code>for (i in 1:99999) x &lt;- c(x,sample(1:de6(1), 1, replace = T))
 mean(x == 1)</code></pre>
-<pre><code>## [1] 0.40947</code></pre>
+<pre><code>## [1] 0.40921</code></pre>
 <hr />
 </div>
 <div id="exercice-2" class="section level4">
 <h4>Exercice 2</h4>
-<p>Dans le championnat de basketball de l’Uhgduzstan, il y a un tirs sur trois à un point, un tirs sur deux à deux points et un tirs sur six à 3 points. Vlad Rabovitch est le meilleur joueur du pays. Lorsqu’il marque, sa probabilité de réussite à un point est de 1/2, à deux points de 1/3, à trois points de 1/4.</p>
+<p>Dans le championnat de basketball de l’Uhgduzstan, il y a un tir sur trois à un point, un tir sur deux à deux points et un tir sur six à 3 points. Vlad Rabovitch est le meilleur joueur du pays. Lorsqu’il marque, sa probabilité de réussite à un point est de 1/2, à deux points de 1/3, à trois points de 1/4.</p>
 <div id="question-1" class="section level5">
 <h5>Question 1</h5>
 <ul>
@@ -173,8 +173,8 @@ mean(x == 1)</code></pre>
 <hr />
 </div>
 </div>
-<div id="exercice-4" class="section level4">
-<h4>Exercice 4</h4>
+<div id="exercice-3" class="section level4">
+<h4>Exercice 3</h4>
 <p>Soient <span class="math">\(n\)</span> un entier non-nul et <span class="math">\((p_i)_{i=1,\dots, n}\)</span> <span class="math">\(n\)</span> nombres positifs dont la somme totale est égale à 1.</p>
 <div id="question-1-1" class="section level5">
 <h5>Question 1</h5>
